--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   ],
   "require" : {
     "php": ">=5.6",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "psr/log": "^1.0",
+    "monolog/monolog": "^1.23"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
@@ -26,6 +28,6 @@
     }
   },
   "autoload-dev": {
-    "psr-4": { "Tests\\": "tests/" }
+    "psr-4": { "Tests\\": "Tests/" }
   }
 }
