--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
     "phpunit/phpunit": "^5.7",
     "escapestudios/symfony2-coding-standard": "^3.0",
     "squizlabs/php_codesniffer": "^3.1",
-    "symfony/var-dumper": "^3.3"
+    "symfony/var-dumper": "^3.3",
+    "symfony/http-kernel": "^3.3",
+    "symfony/framework-bundle": "^3.3",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/serializer": "^3.3"
   },
   "autoload": {
     "psr-4": {
