--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "symfony/http-kernel": "^3.3",
     "symfony/framework-bundle": "^3.3",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/serializer": "^3.3"
+    "symfony/serializer": "^3.3",
+    "friendsofphp/php-cs-fixer": "^2.10"
   },
   "autoload": {
     "psr-4": {
